--- a/COP_290_Assignment1-main/templates/register.html
+++ b/COP_290_Assignment1-main/templates/register.html
@@ -17,6 +17,15 @@
             <div class="form-group">
                 <button type="submit">Register</button>
             </div>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class=flashes>
+                    {% for message in messages %}
+                        <li>{{ message}}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            {% endwith %}
         </form>
         <p>Already have an account? <a href="/">Login here</a></p>
     </div>
