--- a/COP_290_Assignment1-main/templates/login.html
+++ b/COP_290_Assignment1-main/templates/login.html
@@ -15,7 +15,7 @@
                 <input type="password" name="password" placeholder="Password" required>
             </div>
             <div class="form-group">
-                <button type="submit">Login</button>
+                <button type="submit" class ="LoginButton">Login</button>
             </div>
         </form>
         <p>Don't have an account? <a href="/register">Register here</a></p>
