Changed graph drwing code to separate getting stock data from graph rendering logic

--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -98,6 +98,10 @@ div.GraphContainer{
     width: 80%;
     height: 100%;
 }
+div.TableContainer{
+    width:80%;
+    height:100%;
+}
 div.StockSearchDiv{
     display: flex;
     justify-content: space-between;
