--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -100,7 +100,19 @@ div.GraphContainer{
 }
 div.TableContainer{
     width:80%;
-    height:100%;
+    height:90%;
+    overflow: auto;
+    padding-top: 50px;
+}
+div.IndividualTable{
+    width: 80%;
+    height: 600px;
+    overflow: auto;
+    align-items: center;
+    background-color: bisque;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 30px;
 }
 div.StockSearchDiv{
     display: flex;
