--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -56,16 +56,16 @@
             {% for symbolName in dataFrameDict %}
                 {%set df = dataFrameDict[symbolName]%}
                 <div class="IndividualTable">
-                    <table>
-                        <tr>
+                    <table class="StockDataTable">
+                        <tr class="StockDataTable">
                         {%for key in df %}
-                            <th> {{key}}</th>
+                            <th class = "StockDataTable" > {{key}}</th>
                         {%endfor%}
                         </tr>
                         {%for index,row in df.iterrows()%}
-                            <tr>
+                            <tr class="StockDataTable">
                                 {%for elm in row%}
-                                    <td>{{elm}}</td>
+                                    <td class = "StockDataTable">{{elm}}</td>
                                 {%endfor%}
                             </tr>
                         {%endfor%}
