Added UI for table heading made some other minor ui fixes have to add formatting for floats

--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -56,6 +56,11 @@
             {% for symbolName in dataFrameDict %}
                 {%set df = dataFrameDict[symbolName]%}
                 <div class="IndividualTable">
+                    <div class="HeadingContainer">
+                        <table class="TableHeading">
+                            <tr><td class="TableHeading">{{symbolName}}</td></tr>
+                        </table>
+                    </div>
                     <table class="StockDataTable">
                         <tr class="StockDataTable">
                         {%for key in df %}
