--- a/COP_290_Assignment1-main/static/style.css
+++ b/COP_290_Assignment1-main/static/style.css
@@ -117,6 +117,16 @@ tr.StockDataTable:nth-child(even){
 td.StockDataTable{
     border: 1px solid;
 }
+td.TableHeading{
+    font-size: 32px;
+}
+table.TableHeading{
+    width: 100%;
+    text-align: center;
+}
+div.HeadingContainer{
+    width: 100%;
+}
 div.TableContainer{
     width:80%;
     height:90%;
