--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -69,9 +69,22 @@
                         </tr>
                         {%for index,row in df.iterrows()%}
                             <tr class="StockDataTable">
-                                {%for elm in row%}
-                                    <td class = "StockDataTable">{{elm}}</td>
-                                {%endfor%}
+                                {%set Datetime = row['Datetime']%}
+                                    <td class = "StockDataTable">{{Datetime}}</td>
+                                {%set Open = row['Open']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(Open)}}</td>
+                                {%set High = row['High']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(High)}}</td>
+                                {%set Low = row['Low']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(Low)}}</td>
+                                {%set Close = row['Close']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(Close)}}</td>
+                                {%set Volume = row['Volume']%}
+                                    <td class = "StockDataTable">{{Volume}}</td>
+                                {%set Dividend = row['Dividends']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(Dividend)}}</td>
+                                {%set StockSplits = row['Stock Splits']%}    
+                                    <td class = "StockDataTable">{{"%.2f"|format(StockSplits)}}</td>
                             </tr>
                         {%endfor%}
                     </table>
