--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -185,11 +185,11 @@
                     <form action="/process_graph_options" method="POST">
                         <label>Select Graph Types:</label><br>
 
-                        <input type="checkbox" name="graph_options[]" value="OPEN" onchange="this.form.submit()" {%selected_graphs["OPEN"] %} checked {% endif %}> Open<br>
-                        <input type="checkbox" name="graph_options[]" value="CLOSE" onchange="this.form.submit()"{% if "CLOSE" in selected_graphs %} checked {% endif %}> Close<br>
-                        <input type="checkbox" name="graph_options[]" value="LOW" onchange="this.form.submit()"{% if "LOW" in selected_graphs %} checked {% endif %}> Low<br>
-                        <input type="checkbox" name="graph_options[]" value="HIGH" onchange="this.form.submit()"{% if "HIGH" in selected_graphs %} checked {% endif %}> High<br>
-                        <input type="checkbox" name="graph_options[]" value="COMBINED" onchange="this.form.submit()"{% if "COMBINED" in selected_graphs %} checked {% endif %}> Combined<br>
+                        <input type="checkbox" name="graph_options[]" value="OPEN" onchange="this.form.submit()" {% if selected_graphs["OPEN"] %} checked {% endif %}> Open<br>
+                        <input type="checkbox" name="graph_options[]" value="CLOSE" onchange="this.form.submit()"{% if selected_graphs["OPEN"] %} checked {% endif %}> Close<br>
+                        <input type="checkbox" name="graph_options[]" value="LOW" onchange="this.form.submit()"{% if selected_graphs["OPEN"] %} checked {% endif %}> Low<br>
+                        <input type="checkbox" name="graph_options[]" value="HIGH" onchange="this.form.submit()"{% if selected_graphs["OPEN"] %} checked {% endif %}> High<br>
+                        <input type="checkbox" name="graph_options[]" value="COMBINED" onchange="this.form.submit()"{% if selected_graphs["OPEN"] %} checked {% endif %}> Combined<br>
                         <!-- <input type="checkbox" name="graph_options[]" value="radar_chart"> Radar Chart<br> -->
 
                         <!-- <button type="submit">Submit</button> -->
