--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -47,12 +47,12 @@
             {{ username }}
         </div>
         <div class="StockInfoAndGraph">
-            <!--
+            
             <div class="GraphContainer">
                 {{ div | safe}}
                 {{ script | safe}}
-            </div>-->
-            <div class="TableContainer">
+            </div>
+            <!-- <div class="TableContainer">
             {% for symbolName in dataFrameDict %}
                 {%set df = dataFrameDict[symbolName]%}
                 <div class="IndividualTable">
@@ -90,7 +90,7 @@
                     </table>
                 </div>
             {% endfor%}
-            </div>
+            </div> -->
             <div class="StockInfo">
                 <table>
                     <tr>
