--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -11,87 +11,72 @@
 <script src="https://cdn.bokeh.org/bokeh/release/bokeh-gl-3.3.3.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.bokeh.org/bokeh/release/bokeh-mathjax-3.3.3.min.js" crossorigin="anonymous"></script>
 
-<body class="StockList">
+
+
+
+<body >
+    <header>
+
+        <nav >
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Home</a></li>
+                <!-- <a href="#">Home</a> -->
+                <!-- <a href="#">About us</a> -->
+            </ul>
+        </nav>
+
+    </header>
     <!--
-    <div class="welcome-container">
-        <h1>Welcome, {{ username }}!</h1>
-        <p>This is your dashboard.</p>
-        <a href="/logout" class="logout-button">Logout</a>
-    </div>
+        <div class="welcome-container">
+            <h1>Welcome, {{ username }}!</h1>
+            <p>This is your dashboard.</p>
+            <a href="/logout" class="logout-button">Logout</a>
+        </div>
     -->
-    <div class="StockListAndSearch">
-        <div class="StockSearchDiv">
-            <form action="/updateList" method="POST">
-                <input type="search" name="search bar" class="SearchBar">
-                <button type="submit">Submit</button>
+    <main>
 
-            </form>
-        </div>
-        <div class="StockList">
-            <form action="/selectStock" method="POST">
-                {% for stock in stockList %}
-                {% if stock in curGraphSelection %}
-                <button type="submit" name="selectedStock" value="{{stock}}"
-                    style="background-color: #4CAF50; color: white;">{{stock}}</button>
-                {% else %}
-                <button type="submit" name="selectedStock" value="{{stock}}" color=#>{{stock}}</button>
-                {% endif %}
-                <!-- <p class ="StockItem">{{stock}}</p>             -->
-                {% endfor%}
-            </form>
-        </div>
+        <div class="StockListAndSearch column" id = "left-column">
+            <div class="StockSearchDiv">
+                <form action="/updateList" method="POST">
+                    <input type="search" name="search_bar" class="SearchBar">
+                    <button type="submit">Submit</button>
 
-    </div>
-    <div class="GraphAndStockInfo">
-        <div class="LoginInfo">
+                </form>
+            </div>
+            <div class="StockList">
+                <form action="/selectStock" method="POST">
+                    {% for stock in stockList %}
+                    {% if stock in curGraphSelection %}
+                    <button type="submit" name="selectedStock" value="{{stock}}"
+                        style="background-color: #4CAF50; color: white;">{{stock}}</button>
+                    {% else %}
+                    <button type="submit" name="selectedStock" value="{{stock}}" color=#>{{stock}}</button>
+                    {% endif %}
+                    <!-- <p class ="StockItem">{{stock}}</p>             -->
+                    {% endfor%}
+                </form>
+            </div>
+
+        </div>
+        <div class="Graph column" id = "center-column">
+            <!-- <div class="LoginInfo">
             {{ username }}
-        </div>
-        <div class="StockInfoAndGraph">
-            
+        </div> -->
             <div class="GraphContainer">
                 {{ div | safe}}
                 {{ script | safe}}
             </div>
-            <!-- <div class="TableContainer">
-            {% for symbolName in dataFrameDict %}
-                {%set df = dataFrameDict[symbolName]%}
-                <div class="IndividualTable">
-                    <div class="HeadingContainer">
-                        <table class="TableHeading">
-                            <tr><td class="TableHeading">{{symbolName}}</td></tr>
-                        </table>
-                    </div>
-                    <table class="StockDataTable">
-                        <tr class="StockDataTable">
-                        {%for key in df %}
-                            <th class = "StockDataTable" > {{key}}</th>
-                        {%endfor%}
-                        </tr>
-                        {%for index,row in df.iterrows()%}
-                            <tr class="StockDataTable">
-                                {%set Datetime = row['Datetime']%}
-                                    <td class = "StockDataTable">{{Datetime}}</td>
-                                {%set Open = row['Open']%}
-                                    <td class = "StockDataTable">{{"%.2f"|format(Open)}}</td>
-                                {%set High = row['High']%}
-                                    <td class = "StockDataTable">{{"%.2f"|format(High)}}</td>
-                                {%set Low = row['Low']%}
-                                    <td class = "StockDataTable">{{"%.2f"|format(Low)}}</td>
-                                {%set Close = row['Close']%}
-                                    <td class = "StockDataTable">{{"%.2f"|format(Close)}}</td>
-                                {%set Volume = row['Volume']%}
-                                    <td class = "StockDataTable">{{Volume}}</td>
-                                {%set Dividend = row['Dividends']%}
-                                    <td class = "StockDataTable">{{"%.2f"|format(Dividend)}}</td>
-                                {%set StockSplits = row['Stock Splits']%}    
-                                    <td class = "StockDataTable">{{"%.2f"|format(StockSplits)}}</td>
-                            </tr>
-                        {%endfor%}
-                    </table>
-                </div>
-            {% endfor%}
-            </div> -->
-            <div class="StockInfo">
+            <div class="buttons-over-graph">
+                <button id="mode1">Mode 1</button>
+                <button id="mode2">Mode 2</button>
+                <button id="mode3">Mode 2</button>
+
+            </div>
+        </div>
+        <div class="StockInfo" id = "right-column">
+            <div class="StockInfo1">
                 <table>
                     <tr>
                         <th>{{ curStockInfo['longName'] }}</th>
@@ -176,22 +161,27 @@
                         <td></td>
                     </tr>
                 </table>
-                <div class="Choose Duration">
+                <div class="StockInfo2">
                     <form action="/process_duration" method="POST">
                         <label for="duration">Select Data Duration:</label>
-                        <select name="duration" id="duration">
-                            <option value="1_day" {% if selected_duration == '1_day' %} selected {% endif %}>1 Day</option>
-                            <option value="1_week" {% if selected_duration == '1_week' %} selected {% endif %}>1 Week</option>
-                            <option value="1_month" {% if selected_duration == '1_month' %} selected {% endif %}>1 Month</option>
-                            <option value="1_year" {% if selected_duration == '1_year' %} selected {% endif %}>1 Year</option>
-                            <option value="5_year" {% if selected_duration == '5_year' %} selected {% endif %}>5 Year</option>
-                            <option value="All" {% if selected_duration == 'All' %} selected {% endif %}>All</option>
+                        <select name="duration" id="duration" onchange="this.form.submit()">
+                            <option value="1_day" {% if selected_duration=='1_day' %} selected {% endif %}>1 Day
+                            </option>
+                            <option value="1_week" {% if selected_duration=='1_week' %} selected {% endif %}>1 Week
+                            </option>
+                            <option value="1_month" {% if selected_duration=='1_month' %} selected {% endif %}>1
+                                Month</option>
+                            <option value="1_year" {% if selected_duration=='1_year' %} selected {% endif %}>1 Year
+                            </option>
+                            <option value="5_year" {% if selected_duration=='5_year' %} selected {% endif %}>5 Year
+                            </option>
+                            <option value="All" {% if selected_duration=='All' %} selected {% endif %}>All</option>
                         </select>
 
-                        <button type="submit">Submit</button>
+                        <!-- <button type="submit">Submit</button> -->
                     </form>
                 </div>
-                <div class="Choose Graph Type">
+                <div class="StockInfo3">
                     <form action="/process_graph_options" method="POST">
                         <label>Select Graph Types:</label><br>
 
@@ -201,14 +191,14 @@
                         <input type="checkbox" name="graph_options[]" value="CLOSE" onchange="this.form.submit()" {% if selected_graphs["CLOSE"] == True %} checked {% endif %}>Close<br>
                         <input type="checkbox" name="graph_options[]" value="COMBINED" onchange="this.form.submit()" {% if selected_graphs["COMBINED"] == True %} checked {% endif %}>Combined<br>
                         <!-- <input type="checkbox" name="graph_options[]" value="radar_chart"> Radar Chart<br> -->
-                    
-                        <button type="submit">Submit</button>
+
+                        <!-- <button type="submit">Submit</button> -->
                     </form>
-                    
+
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 
 
