readded the code for drawing table in welcome.html commented out for the time being though

--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -74,6 +74,45 @@
                 <button id="mode3">Mode 2</button>
 
             </div>
+            <!-- <div class="TableContainer">
+            {% for symbolName in dataFrameDict %}
+                {%set df = dataFrameDict[symbolName]%}
+                <div class="IndividualTable">
+                    <div class="HeadingContainer">
+                        <table class="TableHeading">
+                            <tr><td class="TableHeading">{{symbolName}}</td></tr>
+                        </table>
+                    </div>
+                    <table class="StockDataTable">
+                        <tr class="StockDataTable">
+                        {%for key in df %}
+                            <th class = "StockDataTable" > {{key}}</th>
+                        {%endfor%}
+                        </tr>
+                        {%for index,row in df.iterrows()%}
+                            <tr class="StockDataTable">
+                                {%set Datetime = row['Datetime']%}
+                                    <td class = "StockDataTable">{{Datetime}}</td>
+                                {%set Open = row['Open']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(Open)}}</td>
+                                {%set High = row['High']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(High)}}</td>
+                                {%set Low = row['Low']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(Low)}}</td>
+                                {%set Close = row['Close']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(Close)}}</td>
+                                {%set Volume = row['Volume']%}
+                                    <td class = "StockDataTable">{{Volume}}</td>
+                                {%set Dividend = row['Dividends']%}
+                                    <td class = "StockDataTable">{{"%.2f"|format(Dividend)}}</td>
+                                {%set StockSplits = row['Stock Splits']%}    
+                                    <td class = "StockDataTable">{{"%.2f"|format(StockSplits)}}</td>
+                            </tr>
+                        {%endfor%}
+                    </table>
+                </div>
+            {% endfor%}
+            </div> -->
         </div>
         <div class="StockInfo" id = "right-column">
             <div class="StockInfo1">
