--- a/COP_290_Assignment1-main/templates/welcome.html
+++ b/COP_290_Assignment1-main/templates/welcome.html
@@ -226,11 +226,11 @@
                     <form action="/process_graph_options" method="POST">
                         <label>Select Graph Types:</label><br>
 
-                        <input type="checkbox" name="graph_options[]" value="HIGH" onchange="this.form.submit()" {% if selected_graphs["HIGH"] == True %} checked {% endif %}>High<br>
-                        <input type="checkbox" name="graph_options[]" value="LOW" onchange="this.form.submit()" {% if selected_graphs["LOW"] == True %} checked {% endif %}>Low<br>
-                        <input type="checkbox" name="graph_options[]" value="OPEN" onchange="this.form.submit()"  {% if selected_graphs["OPEN"] == True %} checked {% endif %}>Open<br>
-                        <input type="checkbox" name="graph_options[]" value="CLOSE" onchange="this.form.submit()" {% if selected_graphs["CLOSE"] == True %} checked {% endif %}>Close<br>
-                        <input type="checkbox" name="graph_options[]" value="COMBINED" onchange="this.form.submit()" {% if selected_graphs["COMBINED"] == True %} checked {% endif %}>Combined<br>
+                        <input type="checkbox" name="graph_options[]" value="HIGH" onchange="this.form.submit()" {% if curGraphSelection[currentlySelected]['graphCont']["HIGH"] == True %} checked {% endif %}>High<br>
+                        <input type="checkbox" name="graph_options[]" value="LOW" onchange="this.form.submit()" {% if curGraphSelection[currentlySelected]['graphCont']["LOW"] == True %} checked {% endif %}>Low<br>
+                        <input type="checkbox" name="graph_options[]" value="OPEN" onchange="this.form.submit()"  {% if curGraphSelection[currentlySelected]['graphCont']["OPEN"] == True %} checked {% endif %}>Open<br>
+                        <input type="checkbox" name="graph_options[]" value="CLOSE" onchange="this.form.submit()" {% if curGraphSelection[currentlySelected]['graphCont']["CLOSE"] == True %} checked {% endif %}>Close<br>
+                        <input type="checkbox" name="graph_options[]" value="COMBINED" onchange="this.form.submit()" {% if curGraphSelection[currentlySelected]['graphCont']["COMBINED"] == True %} checked {% endif %}>Combined<br>
                         <!-- <input type="checkbox" name="graph_options[]" value="radar_chart"> Radar Chart<br> -->
 
                         <!-- <button type="submit">Submit</button> -->
